Finished play screen and create players screen

--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
     <script type="module" src="app.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1 class="main-title">Battleship</h1>
+      <button id="playBtn">Play</button>
+    </main>
+    <footer>
+      Created by
+      <a href="https://github.com/Hekimianz" target="_blank">Aram Hekimian</a>
+    </footer>
+  </body>
 </html>
